--- a/css/index.css
+++ b/css/index.css
@@ -1,82 +1,26 @@
+
 *{
     margin: 0;
     padding: 0;
     font-family: var(--font-text-engiin);
     background-color: var(--color-bg);
 }
-header{
-    width: var(--percent-hundred);
-    height: 15vh;
-    background-color: var(--color-bg);
-    color: var(--color-garchig-main);
-    & nav:nth-of-type(2){
-        display: flex;
-        flex-direction: row;
-        & #menu{
-            display: flex;
-            flex-direction: row;
-            list-style-type: none;
-            font-size: var(--font-size-big);
-            margin-top: 4rem;
-            padding-left: 7rem;
-            & a{
-                text-decoration: none;
-                font-family: var(--font-header);
-                font-weight: bold;
-                color: var(--color-garchig-main);
-                text-align: center;
-            }
-            & #login{
-                text-decoration: none;
-                font-family: var(--font-header);
-                font-weight: bold;
-                color: var(--color-red);
-                padding-left: 4rem;
-            }
-            & li{
-                margin-right: 10%;
-                display: grid;
-            }
-
-        }
-        & #logo{
-            padding-left: 3rem;
-            height: 10rem;
-        }
-    }
-    & #address_icon{
-        display: flex;
-        flex-direction: row;
-        justify-content: right;
-        padding-top: 2rem;
-        padding-right: 5%;
-        list-style-type: none;
-        float: right;
-        & a{
-            padding-right: 0.5rem;
-            & img{
-                height: 1rem;
-            }
-        }
-    }
-}
 main{
     & .container_poster{
         display: grid;
-        width: 100%;
-        margin-top: 1rem;
         & #bigposter-container{
             place-self: center;
-            width: 100%;
-            height: 30rem;
+            width: 76rem;
+            height: 38rem;
+            padding-right: 10rem;
             position: relative;
             overflow: hidden;
             & #bigposter1{
                 position: absolute;
                 top: 10%;
                 left: 12%;
-                width: 80%;
-                height: width / 2;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide1 10s infinite;
             }
@@ -84,8 +28,8 @@ main{
                 position: absolute;
                 top: 10%;
                 left: 12%;
-                width: 80%;
-                height: width / 2;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide2 10s infinite;
             }
@@ -93,8 +37,8 @@ main{
                 position: absolute;
                 top: 10%;
                 left: 12%;
-                width: 80%;
-                height: width / 2;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide3 10s infinite;
             }
@@ -149,7 +93,7 @@ main{
             & a{
                 display: grid;
                 gap: 2rem;
-                padding: 2% 8% 2% 5rem;
+                padding: 2rem 5rem 2rem 5rem;
                 text-decoration: none;
                 text-align: center;
                 font-family: var(--font-londrina);
@@ -161,57 +105,6 @@ main{
                 }
 
             }
-        }
-    }
-}
-footer{
-    display: flex;
-    padding-left: 5rem;
-    & #address_info{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding-right: 5rem;
-        & li{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            color: var(--color-footer-text);
-            & a{
-                text-decoration: none;
-                text-align: center;
-                justify-content: center;
-                color: var(--color-red);
-            }
-            & img{
-                padding: 1rem;
-                height: 3rem;
-                width: 15%;
-            }
-        }
-    }
-    & #map{
-        display: flex;
-        flex-direction: row;
-        flex-flow: row wrap;
-        justify-content: space-between;
-        & .location{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin: 1rem 1rem;
-            & p{
-                padding: 0.5rem;
-                font-family: var(--font-text-engiin);
-                font-size: var(--font-size-big);
-                color: var(--color-footer-text);
-            }
-        }
-        & img{
-            height: 7rem;
-            width: auto;
         }
     }
 }
@@ -233,18 +126,48 @@ footer{
 section::-webkit-scrollbar {
     display: none; 
 }
-@media(max-width: 62.5rem){
+@media(max-width: 48rem){
     main{
         & .container_poster{
+            width: auto;
+            padding: 1rem;
             & #bigposter-container{
-                height: 25rem;
+                width: 80%;
+                position: relative;
+                & #bigposter1,
+                & #bigposter2,
+                & #bigposter3{
+                    position: absolute;
+                    top: 0%;
+                    left: 0%;
+                    height: auto;
+                    width: var(--percent-hundred);
+                }
+            }
+            & .button{
+                place-self: center;
+                position: absolute;
+                top: 90%;
+                & button{
+                    padding: 0.5rem 1rem;
+                    font-size: var(--font-size-reting);
+                    
+                }
             }
         }
         & section{
+            padding: rem;
+            width: auto;
+            & h2{
+                padding: 2rem 0rem 2rem 1.5rem;
+            }
             & ul{
                 & a{
+                    padding: 1rem;
+                    font-size: var(--font-size-big);
                     & img{
-                        height: 15rem;
+                        height: 21.5rem;
+                        width: auto;
                     }
     
                 }
@@ -252,251 +175,46 @@ section::-webkit-scrollbar {
         }
     }
 }
-@media(max-width: 50rem){
+
+@media(max-width: 25rem){
     main{
         & .container_poster{
-            & #bigposter-container{
-                height: 20rem;
-            }
             & .button{
                 place-self: center;
+                position: absolute;
+                top: 63%;
                 & button{
-                    background-color: var(--color-bg);
-                    color: var(--color-text-engiin);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-big);
-                    font-family: var(--font-text-engiin);
-                    & img {
-                        width: auto; 
-                        height: 1rem;   
+                    padding: 0.2rem 0.5rem;
+                    font-size: 0.5rem;
+                    & img{
+                        height: 0.6rem;
+                        width: auto;
                     }
-                }
-                & #buy_button{
-                    background-color: var(--color-bg);
-                    color: var(--color-red);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-big);
-                    font-weight: bold;
-                    & img {
-                        width: auto; 
-                        height: 1rem;   
-                    }
+                    
                 }
             }
         }
         & section{
+            padding: 0;
+            width: auto;
+            & h2{
+                padding: 1rem 0rem 2rem 0.5rem;
+                font-size: var(--font-size-small);
+            }
             & ul{
                 & a{
-                    font-size: var(--font-size-5);
+                    padding: 1rem;
+                    font-size: var(--font-size-reting);
                     & img{
                         height: 10rem;
-                    }
-    
-                }
-            }
-        }
-    }
-}
-@media(max-width: 37.5rem){
-    main{
-        & .container_poster{
-            & #bigposter-container{
-                height: 15rem;
-            }
-            & .button{
-                place-self: center;
-                & button{
-                    background-color: var(--color-bg);
-                    color: var(--color-text-engiin);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-big);
-                    font-family: var(--font-text-engiin);
-                    & img {
-                        width: auto; 
-                        height: 1rem;   
-                    }
-                }
-                & #buy_button{
-                    background-color: var(--color-bg);
-                    color: var(--color-red);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-big);
-                    font-weight: bold;
-                    & img {
-                        width: auto; 
-                        height: 1rem;   
+                        width: auto;
                     }
                 }
             }
         }
-        & section{
-            & ul{
-                & a{
-                    font-size: var(--font-size-5);
-                    & img{
-                        height: 7rem;
-                    }
-    
-                }
-            }
-        }
     }
 }
-@media(max-width: 68rem){
-    header{
-        height: 14vh;
-        & nav:nth-of-type(2){
-            & #menu{
-                font-size: var(--font-size-small);
-                padding-left: 3rem;
-            }
-        }
-    }
-    footer{
-        & #address_info{
-            width: 40%;
-            padding-right: 0rem;
-            & li{
-                & img{
-                    height: 2.2rem;
-                }
-            }
-        }
-        & #map{
-            & div{
-                width: 100%;
-            }
-        }
-    }
-}
-@media(max-width: 48rem){
-    header{
-        height: 10vh;
-        max-width: 48rem;
-        & nav:nth-of-type(2){
-            & #menu{
-                margin-top: 2rem;
-                margin-left: 40%;
-                flex-direction: column;
-                padding: 1rem;
-                font-size: var(--font-size-small);
-                & a{
-                    text-align: left;
-                    width: 10rem;
-                }
-                & #login{
-                    padding-left: 0rem;
-                }
-            }
-        }
-        & #address_icon{
-            padding-top: 1rem;
-            padding-right: 1%;
-        }
-    }
-    footer{
-        padding-left: 2rem;
-        width: auto;
-        justify-content: space-between;
-        & #address_info{
-            font-size: var(--font-size-small);
-            & li{
-                & img{
-                    padding: 0.5rem;
-                    height: 1.5rem;
-                    width: auto;
-                }
-            }
-        }
-        & #map{
-            flex-direction: column;
-            padding-right: 4rem;
-            & .location{
-                margin: 0.2rem;
-                & p{
-                    padding: 0.2rem;
-                    font-size: var(--font-size-small);
-                   
-                }
-            }
-            & img{
-                height: 3.5rem;
-            }
-        }
-    }
-    
-}
-@media(max-width: 35rem){
-    header{
-        height: 10vh;
-        max-width: 48rem;
-        & nav:nth-of-type(2){
-            & #menu{
-                margin-left: 20%;
-            }
-        }
-    } 
-}
-@media(max-width: 25rem){
-    header{
-        height: 5vh;
-        max-width: 25rem;
-        & nav:nth-of-type(2){
-            justify-content: center;
-            & #menu{
-                margin-left: 30%;
-                flex-direction: column;
-                padding: 0.5rem;
-                font-size: 0.65rem;
-            }
-            & #logo{
-                height: 5rem;
-                width: auto;
-            }
-        }
-        & #address_icon{
-            padding-top: 0.5rem;
-            padding-right: 1.5rem;
-            & a{
-                padding-right: 0.2rem;
-                & img{
-                    height: 0.5rem;
-                }
-            }
-        }
-    }
-    footer{
-        padding: 0;
-        justify-content: space-evenly;
-        & #address_info{
-            padding-left: 4rem;
-            font-size: 0.7rem;
-            & li{
-                & img{
-                    padding: 0.5rem;
-                    height: 1rem;
-                    width: auto;
-                }
-            }
-        }
-        & #map{
-            flex-direction: column;
-            padding-right: 0rem;
-            & .location{
-                & p{
-                    font-size: 0.7rem;
-                   
-                }
-            }
-        }
-    }
-    
-}
+
+
+
+  
