--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,7 @@
     
 }
 header{
+    margin-bottom: 4rem;
     width: var(--percent-hundred);
     height: 15vh;
     background-color: var(--color-bg);
