--- a/public/css/movie.css
+++ b/public/css/movie.css
@@ -14,34 +14,21 @@ main {margin-top: 11rem;
         display: flex;
         flex-direction: row;
         padding: 2rem;
+        & a img {
+            width: 20rem;
+            height: auto;
+            flex-shrink: 0;
+            margin: 1rem;
+        }
         & div {
             display: flex;
             flex-direction: column;
-            & img {
-                width: 25rem;
-                height: auto;
-                flex-shrink: 0;
-                margin: 0;
-            }
             & iframe {
                 width: 25rem;
                 height: 15rem;
                 flex-shrink: 0;
             }
-            & div {
-                display: flex;
-                flex-direction: row;
-                & img {
-                    width: 2rem;
-                    height: auto;
-                    padding: 0.5rem;    
-                }
-                & h5 {
-                    color: var(--color-text-engiin);
-                    font-size: large;
-                    padding: 0 0.5rem;
-                }
-            }
+            
         }
         & nav {
             display: flex;
